// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flow codeGeneration covariant properties with $ReadOnlyArray 1`] = `
Object {
  "__generated__/HeroName.js": FlowGeneratedFile {
    "fileContents": "

/* @flow */
/* eslint-disable */
// This file was automatically generated and should not be edited.

// ====================================================
// GraphQL query operation: HeroName
// ====================================================

export type HeroName_hero_Human_friends = {|
  +__typename: \\"Human\\",
  +name: string, // What this human calls themselves
|} | {|
  +__typename: \\"Droid\\",
  +id: string,   // The ID of the droid
|};

export type HeroName_hero = {|
  +__typename: \\"Human\\",
  +name: string,                                           // What this human calls themselves
  +id: string,                                             // The ID of the human
  +homePlanet: ?string,                                    // The home planet of the human, or null if unknown
  +friends: ?$ReadOnlyArray<?HeroName_hero_Human_friends>, // This human's friends, or an empty list if they have none
|} | {|
  +__typename: \\"Droid\\",
  +name: string,                                           // What others call this droid
  +id: string,                                             // The ID of the droid
  +appearsIn: $ReadOnlyArray<?Episode>,                    // The movies this droid appears in
|};

export type HeroName = {|
  +hero: ?HeroName_hero
|};

export type HeroNameVariables = {|
  +episode?: ?Episode
|};

//==============================================================
// START Enums and Input Objects
// All enums and input objects are included in every output file
// for now, but this will be changed soon.
// TODO: Link to issue to fix this.
//==============================================================

// The episodes in the Star Wars trilogy
export type Episode = \\"EMPIRE\\" | \\"JEDI\\" | \\"NEWHOPE\\";

//==============================================================
// END Enums and Input Objects
//==============================================================",
  },
  "__generated__/droidFragment.js": FlowGeneratedFile {
    "fileContents": "

/* @flow */
/* eslint-disable */
// This file was automatically generated and should not be edited.

// ====================================================
// GraphQL fragment: droidFragment
// ====================================================

export type droidFragment = {|
  +__typename: \\"Droid\\",
  +appearsIn: $ReadOnlyArray<?Episode>, // The movies this droid appears in
|};

//==============================================================
// START Enums and Input Objects
// All enums and input objects are included in every output file
// for now, but this will be changed soon.
// TODO: Link to issue to fix this.
//==============================================================

// The episodes in the Star Wars trilogy
export type Episode = \\"EMPIRE\\" | \\"JEDI\\" | \\"NEWHOPE\\";

//==============================================================
// END Enums and Input Objects
//==============================================================",
  },
  "__generated__/humanFragment.js": FlowGeneratedFile {
    "fileContents": "

/* @flow */
/* eslint-disable */
// This file was automatically generated and should not be edited.

// ====================================================
// GraphQL fragment: humanFragment
// ====================================================

export type humanFragment_friends = {|
  +__typename: \\"Human\\",
  +name: string, // What this human calls themselves
|} | {|
  +__typename: \\"Droid\\",
  +id: string,   // The ID of the droid
|};

export type humanFragment = {|
  +__typename: \\"Human\\",
  +homePlanet: ?string,                              // The home planet of the human, or null if unknown
  +friends: ?$ReadOnlyArray<?humanFragment_friends>, // This human's friends, or an empty list if they have none
|};

//==============================================================
// START Enums and Input Objects
// All enums and input objects are included in every output file
// for now, but this will be changed soon.
// TODO: Link to issue to fix this.
//==============================================================

// The episodes in the Star Wars trilogy
export type Episode = \\"EMPIRE\\" | \\"JEDI\\" | \\"NEWHOPE\\";

//==============================================================
// END Enums and Input Objects
//==============================================================",
  },
}
`;

exports[`Flow codeGeneration fragment spreads with inline fragments 1`] = `
Object {
  "__generated__/HeroName.js": FlowGeneratedFile {
    "fileContents": "

/* @flow */
/* eslint-disable */
// This file was automatically generated and should not be edited.

// ====================================================
// GraphQL query operation: HeroName
// ====================================================

export type HeroName_hero_Human_friends = {
  __typename: \\"Human\\",
  name: string, // What this human calls themselves
} | {
  __typename: \\"Droid\\",
  id: string,   // The ID of the droid
};

export type HeroName_hero = {
  __typename: \\"Human\\",
  name: string,                                  // What this human calls themselves
  id: string,                                    // The ID of the human
  homePlanet: ?string,                           // The home planet of the human, or null if unknown
  friends: ?Array<?HeroName_hero_Human_friends>, // This human's friends, or an empty list if they have none
} | {
  __typename: \\"Droid\\",
  name: string,                                  // What others call this droid
  id: string,                                    // The ID of the droid
  appearsIn: Array<?Episode>,                    // The movies this droid appears in
};

export type HeroName = {
  hero: ?HeroName_hero
};

export type HeroNameVariables = {
  episode?: ?Episode
};

//==============================================================
// START Enums and Input Objects
// All enums and input objects are included in every output file
// for now, but this will be changed soon.
// TODO: Link to issue to fix this.
//==============================================================

// The episodes in the Star Wars trilogy
export type Episode = \\"EMPIRE\\" | \\"JEDI\\" | \\"NEWHOPE\\";

//==============================================================
// END Enums and Input Objects
//==============================================================",
  },
  "__generated__/droidFragment.js": FlowGeneratedFile {
    "fileContents": "

/* @flow */
/* eslint-disable */
// This file was automatically generated and should not be edited.

// ====================================================
// GraphQL fragment: droidFragment
// ====================================================

export type droidFragment = {
  __typename: \\"Droid\\",
  appearsIn: Array<?Episode>, // The movies this droid appears in
};

//==============================================================
// START Enums and Input Objects
// All enums and input objects are included in every output file
// for now, but this will be changed soon.
// TODO: Link to issue to fix this.
//==============================================================

// The episodes in the Star Wars trilogy
export type Episode = \\"EMPIRE\\" | \\"JEDI\\" | \\"NEWHOPE\\";

//==============================================================
// END Enums and Input Objects
//==============================================================",
  },
  "__generated__/humanFragment.js": FlowGeneratedFile {
    "fileContents": "

/* @flow */
/* eslint-disable */
// This file was automatically generated and should not be edited.

// ====================================================
// GraphQL fragment: humanFragment
// ====================================================

export type humanFragment_friends = {
  __typename: \\"Human\\",
  name: string, // What this human calls themselves
} | {
  __typename: \\"Droid\\",
  id: string,   // The ID of the droid
};

export type humanFragment = {
  __typename: \\"Human\\",
  homePlanet: ?string,                     // The home planet of the human, or null if unknown
  friends: ?Array<?humanFragment_friends>, // This human's friends, or an empty list if they have none
};

//==============================================================
// START Enums and Input Objects
// All enums and input objects are included in every output file
// for now, but this will be changed soon.
// TODO: Link to issue to fix this.
//==============================================================

// The episodes in the Star Wars trilogy
export type Episode = \\"EMPIRE\\" | \\"JEDI\\" | \\"NEWHOPE\\";

//==============================================================
// END Enums and Input Objects
//==============================================================",
  },
}
`;

exports[`Flow codeGeneration fragment with fragment spreads 1`] = `
Object {
  "__generated__/anotherFragment.js": FlowGeneratedFile {
    "fileContents": "

/* @flow */
/* eslint-disable */
// This file was automatically generated and should not be edited.

// ====================================================
// GraphQL fragment: anotherFragment
// ====================================================

export type anotherFragment = {
  __typename: \\"Human\\" | \\"Droid\\",
  id: string,   // The ID of the character
  name: string, // The name of the character
};

//==============================================================
// START Enums and Input Objects
// All enums and input objects are included in every output file
// for now, but this will be changed soon.
// TODO: Link to issue to fix this.
//==============================================================

//==============================================================
// END Enums and Input Objects
//==============================================================",
  },
  "__generated__/simpleFragment.js": FlowGeneratedFile {
    "fileContents": "

/* @flow */
/* eslint-disable */
// This file was automatically generated and should not be edited.

// ====================================================
// GraphQL fragment: simpleFragment
// ====================================================

export type simpleFragment = {
  __typename: \\"Human\\" | \\"Droid\\",
  name: string, // The name of the character
};

//==============================================================
// START Enums and Input Objects
// All enums and input objects are included in every output file
// for now, but this will be changed soon.
// TODO: Link to issue to fix this.
//==============================================================

//==============================================================
// END Enums and Input Objects
//==============================================================",
  },
}
`;

exports[`Flow codeGeneration fragment with fragment spreads with inline fragment 1`] = `
Object {
  "__generated__/anotherFragment.js": FlowGeneratedFile {
    "fileContents": "

/* @flow */
/* eslint-disable */
// This file was automatically generated and should not be edited.

// ====================================================
// GraphQL fragment: anotherFragment
// ====================================================

export type anotherFragment_Droid = {
  __typename: \\"Droid\\",
  id: string,   // The ID of the droid
  name: string, // What others call this droid
};

export type anotherFragment_Human = {
  __typename: \\"Human\\",
  id: string,                 // The ID of the human
  name: string,               // What this human calls themselves
  appearsIn: Array<?Episode>, // The movies this human appears in
};

export type anotherFragment = anotherFragment_Droid | anotherFragment_Human;

//==============================================================
// START Enums and Input Objects
// All enums and input objects are included in every output file
// for now, but this will be changed soon.
// TODO: Link to issue to fix this.
//==============================================================

// The episodes in the Star Wars trilogy
export type Episode = \\"EMPIRE\\" | \\"JEDI\\" | \\"NEWHOPE\\";

//==============================================================
// END Enums and Input Objects
//==============================================================",
  },
  "__generated__/simpleFragment.js": FlowGeneratedFile {
    "fileContents": "

/* @flow */
/* eslint-disable */
// This file was automatically generated and should not be edited.

// ====================================================
// GraphQL fragment: simpleFragment
// ====================================================

export type simpleFragment = {
  __typename: \\"Human\\" | \\"Droid\\",
  name: string, // The name of the character
};

//==============================================================
// START Enums and Input Objects
// All enums and input objects are included in every output file
// for now, but this will be changed soon.
// TODO: Link to issue to fix this.
//==============================================================

// The episodes in the Star Wars trilogy
export type Episode = \\"EMPIRE\\" | \\"JEDI\\" | \\"NEWHOPE\\";

//==============================================================
// END Enums and Input Objects
//==============================================================",
  },
}
`;

exports[`Flow codeGeneration handles multiline graphql comments 1`] = `
Object {
  "__generated__/CustomScalar.js": FlowGeneratedFile {
    "fileContents": "

/* @flow */
/* eslint-disable */
// This file was automatically generated and should not be edited.

// ====================================================
// GraphQL query operation: CustomScalar
// ====================================================

export type CustomScalar_commentTest = {
  __typename: \\"CommentTest\\",
  multiLine: ?string, // This is a multi-line comment.
};

export type CustomScalar = {
  commentTest: ?CustomScalar_commentTest
};

//==============================================================
// START Enums and Input Objects
// All enums and input objects are included in every output file
// for now, but this will be changed soon.
// TODO: Link to issue to fix this.
//==============================================================

//==============================================================
// END Enums and Input Objects
//==============================================================",
  },
}
`;

exports[`Flow codeGeneration inline fragment 1`] = `
Object {
  "__generated__/HeroInlineFragment.js": FlowGeneratedFile {
    "fileContents": "

/* @flow */
/* eslint-disable */
// This file was automatically generated and should not be edited.

// ====================================================
// GraphQL query operation: HeroInlineFragment
// ====================================================

export type HeroInlineFragment_hero = {
  __typename: \\"Human\\" | \\"Droid\\",
  name: string, // The name of the character
  id: string,   // The ID of the character
};

export type HeroInlineFragment = {
  hero: ?HeroInlineFragment_hero
};

export type HeroInlineFragmentVariables = {
  episode?: ?Episode
};

//==============================================================
// START Enums and Input Objects
// All enums and input objects are included in every output file
// for now, but this will be changed soon.
// TODO: Link to issue to fix this.
//==============================================================

// The episodes in the Star Wars trilogy
export type Episode = \\"EMPIRE\\" | \\"JEDI\\" | \\"NEWHOPE\\";

//==============================================================
// END Enums and Input Objects
//==============================================================",
  },
}
`;

exports[`Flow codeGeneration inline fragment on type conditions 1`] = `
Object {
  "__generated__/HeroName.js": FlowGeneratedFile {
    "fileContents": "

/* @flow */
/* eslint-disable */
// This file was automatically generated and should not be edited.

// ====================================================
// GraphQL query operation: HeroName
// ====================================================

export type HeroName_hero_Human_friends = {
  __typename: \\"Human\\" | \\"Droid\\",
  name: string, // The name of the character
};

export type HeroName_hero = {
  __typename: \\"Human\\",
  name: string,                                  // What this human calls themselves
  id: string,                                    // The ID of the human
  homePlanet: ?string,                           // The home planet of the human, or null if unknown
  friends: ?Array<?HeroName_hero_Human_friends>, // This human's friends, or an empty list if they have none
} | {
  __typename: \\"Droid\\",
  name: string,                                  // What others call this droid
  id: string,                                    // The ID of the droid
  appearsIn: Array<?Episode>,                    // The movies this droid appears in
};

export type HeroName = {
  hero: ?HeroName_hero
};

export type HeroNameVariables = {
  episode?: ?Episode
};

//==============================================================
// START Enums and Input Objects
// All enums and input objects are included in every output file
// for now, but this will be changed soon.
// TODO: Link to issue to fix this.
//==============================================================

// The episodes in the Star Wars trilogy
export type Episode = \\"EMPIRE\\" | \\"JEDI\\" | \\"NEWHOPE\\";

//==============================================================
// END Enums and Input Objects
//==============================================================",
  },
}
`;

exports[`Flow codeGeneration inline fragment on type conditions with differing inner fields 1`] = `
Object {
  "__generated__/HeroName.js": FlowGeneratedFile {
    "fileContents": "

/* @flow */
/* eslint-disable */
// This file was automatically generated and should not be edited.

// ====================================================
// GraphQL query operation: HeroName
// ====================================================

export type HeroName_hero_Human_friends = {
  __typename: \\"Human\\" | \\"Droid\\",
  name: string, // The name of the character
};

export type HeroName_hero_Droid_friends = {
  __typename: \\"Human\\" | \\"Droid\\",
  id: string, // The ID of the character
};

export type HeroName_hero = {
  __typename: \\"Human\\",
  name: string,                                  // What this human calls themselves
  id: string,                                    // The ID of the human
  homePlanet: ?string,                           // The home planet of the human, or null if unknown
  friends: ?Array<?HeroName_hero_Human_friends>, // This human's friends, or an empty list if they have none
} | {
  __typename: \\"Droid\\",
  name: string,                                  // What others call this droid
  id: string,                                    // The ID of the droid
  appearsIn: Array<?Episode>,                    // The movies this droid appears in
  friends: ?Array<?HeroName_hero_Droid_friends>, // This droid's friends, or an empty list if they have none
};

export type HeroName = {
  hero: ?HeroName_hero
};

export type HeroNameVariables = {
  episode?: ?Episode
};

//==============================================================
// START Enums and Input Objects
// All enums and input objects are included in every output file
// for now, but this will be changed soon.
// TODO: Link to issue to fix this.
//==============================================================

// The episodes in the Star Wars trilogy
export type Episode = \\"EMPIRE\\" | \\"JEDI\\" | \\"NEWHOPE\\";

//==============================================================
// END Enums and Input Objects
//==============================================================",
  },
}
`;

exports[`Flow codeGeneration multiple files 1`] = `"/some/file/__generated__/HeroName.js"`;

exports[`Flow codeGeneration multiple files 2`] = `
FlowGeneratedFile {
  "fileContents": "

/* @flow */
/* eslint-disable */
// This file was automatically generated and should not be edited.

// ====================================================
// GraphQL query operation: HeroName
// ====================================================

export type HeroName_hero = {
  __typename: \\"Human\\" | \\"Droid\\",
  name: string, // The name of the character
  id: string,   // The ID of the character
};

export type HeroName = {
  hero: ?HeroName_hero
};

export type HeroNameVariables = {
  episode?: ?Episode
};

//==============================================================
// START Enums and Input Objects
// All enums and input objects are included in every output file
// for now, but this will be changed soon.
// TODO: Link to issue to fix this.
//==============================================================

// The episodes in the Star Wars trilogy
export type Episode = \\"EMPIRE\\" | \\"JEDI\\" | \\"NEWHOPE\\";

// The input object sent when someone is creating a new review
export type ReviewInput = {
  stars: number,
  commentary?: ?string,
  favorite_color?: ?ColorInput,
};

// The input object sent when passing in a color
export type ColorInput = {
  red: number,
  green: number,
  blue: number,
};

//==============================================================
// END Enums and Input Objects
//==============================================================",
}
`;

exports[`Flow codeGeneration multiple files 3`] = `"/some/file/__generated__/SomeOther.js"`;

exports[`Flow codeGeneration multiple files 4`] = `
FlowGeneratedFile {
  "fileContents": "

/* @flow */
/* eslint-disable */
// This file was automatically generated and should not be edited.

// ====================================================
// GraphQL query operation: SomeOther
// ====================================================

export type SomeOther_hero = {
  __typename: \\"Human\\" | \\"Droid\\",
  name: string,               // The name of the character
  appearsIn: Array<?Episode>, // The movies this character appears in
};

export type SomeOther = {
  hero: ?SomeOther_hero
};

export type SomeOtherVariables = {
  episode?: ?Episode
};

//==============================================================
// START Enums and Input Objects
// All enums and input objects are included in every output file
// for now, but this will be changed soon.
// TODO: Link to issue to fix this.
//==============================================================

// The episodes in the Star Wars trilogy
export type Episode = \\"EMPIRE\\" | \\"JEDI\\" | \\"NEWHOPE\\";

// The input object sent when someone is creating a new review
export type ReviewInput = {
  stars: number,
  commentary?: ?string,
  favorite_color?: ?ColorInput,
};

// The input object sent when passing in a color
export type ColorInput = {
  red: number,
  green: number,
  blue: number,
};

//==============================================================
// END Enums and Input Objects
//==============================================================",
}
`;

exports[`Flow codeGeneration multiple files 5`] = `"__generated__/ReviewMovie.js"`;

exports[`Flow codeGeneration multiple files 6`] = `
FlowGeneratedFile {
  "fileContents": "

/* @flow */
/* eslint-disable */
// This file was automatically generated and should not be edited.

// ====================================================
// GraphQL mutation operation: ReviewMovie
// ====================================================

export type ReviewMovie_createReview = {
  __typename: \\"Review\\",
  stars: number,       // The number of stars this review gave, 1-5
  commentary: ?string, // Comment about the movie
};

export type ReviewMovie = {
  createReview: ?ReviewMovie_createReview
};

export type ReviewMovieVariables = {
  episode?: ?Episode,
  review?: ?ReviewInput,
};

//==============================================================
// START Enums and Input Objects
// All enums and input objects are included in every output file
// for now, but this will be changed soon.
// TODO: Link to issue to fix this.
//==============================================================

// The episodes in the Star Wars trilogy
export type Episode = \\"EMPIRE\\" | \\"JEDI\\" | \\"NEWHOPE\\";

// The input object sent when someone is creating a new review
export type ReviewInput = {
  stars: number,
  commentary?: ?string,
  favorite_color?: ?ColorInput,
};

// The input object sent when passing in a color
export type ColorInput = {
  red: number,
  green: number,
  blue: number,
};

//==============================================================
// END Enums and Input Objects
//==============================================================",
}
`;

exports[`Flow codeGeneration multiple files 7`] = `"/some/file/__generated__/someFragment.js"`;

exports[`Flow codeGeneration multiple files 8`] = `
FlowGeneratedFile {
  "fileContents": "

/* @flow */
/* eslint-disable */
// This file was automatically generated and should not be edited.

// ====================================================
// GraphQL fragment: someFragment
// ====================================================

export type someFragment = {
  __typename: \\"Human\\" | \\"Droid\\",
  appearsIn: Array<?Episode>, // The movies this character appears in
};

//==============================================================
// START Enums and Input Objects
// All enums and input objects are included in every output file
// for now, but this will be changed soon.
// TODO: Link to issue to fix this.
//==============================================================

// The episodes in the Star Wars trilogy
export type Episode = \\"EMPIRE\\" | \\"JEDI\\" | \\"NEWHOPE\\";

// The input object sent when someone is creating a new review
export type ReviewInput = {
  stars: number,
  commentary?: ?string,
  favorite_color?: ?ColorInput,
};

// The input object sent when passing in a color
export type ColorInput = {
  red: number,
  green: number,
  blue: number,
};

//==============================================================
// END Enums and Input Objects
//==============================================================",
}
`;

exports[`Flow codeGeneration query with fragment spreads 1`] = `
Object {
  "__generated__/HeroFragment.js": FlowGeneratedFile {
    "fileContents": "

/* @flow */
/* eslint-disable */
// This file was automatically generated and should not be edited.

// ====================================================
// GraphQL query operation: HeroFragment
// ====================================================

export type HeroFragment_hero = {
  __typename: \\"Human\\" | \\"Droid\\",
  name: string, // The name of the character
  id: string,   // The ID of the character
};

export type HeroFragment = {
  hero: ?HeroFragment_hero
};

export type HeroFragmentVariables = {
  episode?: ?Episode
};

//==============================================================
// START Enums and Input Objects
// All enums and input objects are included in every output file
// for now, but this will be changed soon.
// TODO: Link to issue to fix this.
//==============================================================

// The episodes in the Star Wars trilogy
export type Episode = \\"EMPIRE\\" | \\"JEDI\\" | \\"NEWHOPE\\";

//==============================================================
// END Enums and Input Objects
//==============================================================",
  },
  "__generated__/simpleFragment.js": FlowGeneratedFile {
    "fileContents": "

/* @flow */
/* eslint-disable */
// This file was automatically generated and should not be edited.

// ====================================================
// GraphQL fragment: simpleFragment
// ====================================================

export type simpleFragment = {
  __typename: \\"Human\\" | \\"Droid\\",
  name: string, // The name of the character
};

//==============================================================
// START Enums and Input Objects
// All enums and input objects are included in every output file
// for now, but this will be changed soon.
// TODO: Link to issue to fix this.
//==============================================================

// The episodes in the Star Wars trilogy
export type Episode = \\"EMPIRE\\" | \\"JEDI\\" | \\"NEWHOPE\\";

//==============================================================
// END Enums and Input Objects
//==============================================================",
  },
}
`;

exports[`Flow codeGeneration simple fragment 1`] = `
Object {
  "__generated__/SimpleFragment.js": FlowGeneratedFile {
    "fileContents": "

/* @flow */
/* eslint-disable */
// This file was automatically generated and should not be edited.

// ====================================================
// GraphQL fragment: SimpleFragment
// ====================================================

export type SimpleFragment = {
  __typename: \\"Human\\" | \\"Droid\\",
  name: string, // The name of the character
};

//==============================================================
// START Enums and Input Objects
// All enums and input objects are included in every output file
// for now, but this will be changed soon.
// TODO: Link to issue to fix this.
//==============================================================

//==============================================================
// END Enums and Input Objects
//==============================================================",
  },
}
`;

exports[`Flow codeGeneration simple hero query 1`] = `
Object {
  "__generated__/HeroName.js": FlowGeneratedFile {
    "fileContents": "

/* @flow */
/* eslint-disable */
// This file was automatically generated and should not be edited.

// ====================================================
// GraphQL query operation: HeroName
// ====================================================

export type HeroName_hero = {
  __typename: \\"Human\\" | \\"Droid\\",
  name: string, // The name of the character
  id: string,   // The ID of the character
};

export type HeroName = {
  hero: ?HeroName_hero
};

export type HeroNameVariables = {
  episode?: ?Episode
};

//==============================================================
// START Enums and Input Objects
// All enums and input objects are included in every output file
// for now, but this will be changed soon.
// TODO: Link to issue to fix this.
//==============================================================

// The episodes in the Star Wars trilogy
export type Episode = \\"EMPIRE\\" | \\"JEDI\\" | \\"NEWHOPE\\";

//==============================================================
// END Enums and Input Objects
//==============================================================",
  },
}
`;

exports[`Flow codeGeneration simple mutation 1`] = `
Object {
  "__generated__/ReviewMovie.js": FlowGeneratedFile {
    "fileContents": "

/* @flow */
/* eslint-disable */
// This file was automatically generated and should not be edited.

// ====================================================
// GraphQL mutation operation: ReviewMovie
// ====================================================

export type ReviewMovie_createReview = {
  __typename: \\"Review\\",
  stars: number,       // The number of stars this review gave, 1-5
  commentary: ?string, // Comment about the movie
};

export type ReviewMovie = {
  createReview: ?ReviewMovie_createReview
};

export type ReviewMovieVariables = {
  episode?: ?Episode,
  review?: ?ReviewInput,
};

//==============================================================
// START Enums and Input Objects
// All enums and input objects are included in every output file
// for now, but this will be changed soon.
// TODO: Link to issue to fix this.
//==============================================================

// The episodes in the Star Wars trilogy
export type Episode = \\"EMPIRE\\" | \\"JEDI\\" | \\"NEWHOPE\\";

// The input object sent when someone is creating a new review
export type ReviewInput = {
  stars: number,
  commentary?: ?string,
  favorite_color?: ?ColorInput,
};

// The input object sent when passing in a color
export type ColorInput = {
  red: number,
  green: number,
  blue: number,
};

//==============================================================
// END Enums and Input Objects
//==============================================================",
  },
}
`;
